update burpsuitepro start method for manjaro